--- a/AgkSharp-Template(x64).csproj
+++ b/AgkSharp-Template(x64).csproj
@@ -57,9 +57,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Common.cs" />
-    <Compile Include="Core\Core.cs" />
-    <Compile Include="Core\Hardware.cs" />
+    <Compile Include="AGKCore\Scheduler.cs" />
+    <Compile Include="AGKCore\Data.cs" />
+    <Compile Include="AGKCore\Core.cs" />
+    <Compile Include="AGKCore\Hardware.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
