add media handler for images

--- a/AgkSharp-Template(x64).csproj
+++ b/AgkSharp-Template(x64).csproj
@@ -61,6 +61,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AGKCore\Media.cs" />
     <Compile Include="AGKCore\StaticInvoke.cs" />
     <Compile Include="AGKCore\Scheduler.cs" />
     <Compile Include="AGKCore\Data.cs" />
