--- a/AgkSharp-Template(x64).csproj
+++ b/AgkSharp-Template(x64).csproj
@@ -72,6 +72,7 @@
     <Compile Include="AGKCore\Core.cs" />
     <Compile Include="AGKCore\Hardware.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="AGKProject\CharacterEntity2d.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UIControllers\Common.cs" />
     <Compile Include="UIControllers\GameMenu.cs" />
